--- a/plugins/couchpotato/pom.xml
+++ b/plugins/couchpotato/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+            <version>4.2</version>
+        </dependency>
 
     </dependencies>
 
