--- a/plugins/sonarrtv/pom.xml
+++ b/plugins/sonarrtv/pom.xml
@@ -32,6 +32,12 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib -->
+        <dependency>
+            <groupId>org.imgscalr</groupId>
+            <artifactId>imgscalr-lib</artifactId>
+            <version>4.2</version>
+        </dependency>
 
     </dependencies>
 
