--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>1.0.27</version>
+        <version>1.0.28</version>
     </parent>
 
 
@@ -207,7 +207,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>1.0.27</version>
+            <version>1.0.28</version>
             <exclusions>
                 <exclusion>
                     <artifactId>jade4j</artifactId>
@@ -347,7 +347,8 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Fix logreader bug in the background refresh
+                        Reduce size of thumbnails for sonarr and couchpotato plugin
+                        Fix settings bug for those two
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
