--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>1.0.29</version>
+        <version>1.0.30</version>
     </parent>
 
 
@@ -207,7 +207,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>1.0.29</version>
+            <version>1.0.30</version>
             <exclusions>
                 <exclusion>
                     <artifactId>jade4j</artifactId>
@@ -347,10 +347,8 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Remove loading on main screen
-                        Redo settings pop up UI
-                        Use more elegant animation for grid
-                        Add log path on log reader module full screen
+                        Docker plugin: Add image management
+                        Add complete twitter bootstrap (to use tabs)
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
