- finish kiosk mode - kiosk view for transmission, Mma, Sonarr and network monitor plugins - DB schema update system - refactor singletons into enums

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -28,6 +28,7 @@
         <module>mma</module>
         <module>dockercompose</module>
         <module>logreader</module>
+        <module>plex</module>
     </modules>
 
     <dependencies>
