--- a/web/pom.xml
+++ b/web/pom.xml
@@ -131,6 +131,11 @@
         </dependency>
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>plex</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>sonarrtv</artifactId>
             <version>${project.version}</version>
         </dependency>
