--- a/web/pom.xml
+++ b/web/pom.xml
@@ -327,7 +327,8 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Fix network monitor bug (hopefully) where data could be null and would make the whole plugin crash
+                        Plex now playing module
+                        Kiosk mode
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
