--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2017.07.25</version>
+        <version>2017.07.26</version>
     </parent>
 
 
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2017.07.25</version>
+            <version>2017.07.26</version>
         </dependency>
 
         <dependency>
@@ -327,7 +327,8 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Fix PiHole settings that were crashing
+                        Allow modules to have external endpoints
+                        Finish plex module
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
