--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2017.07.26</version>
+        <version>2017.07.27</version>
     </parent>
 
 
@@ -193,7 +193,13 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2017.07.26</version>
+            <version>2017.07.27</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>spotify</artifactId>
+            <version>${project.version}</version>
         </dependency>
 
         <dependency>
@@ -327,8 +333,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Allow modules to have external endpoints
-                        Finish plex module
+                        Add Spotify now playing module
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
