--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2017.07.29</version>
+        <version>2017.07.30</version>
     </parent>
 
 
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2017.07.29</version>
+            <version>2017.07.30</version>
         </dependency>
 
         <dependency>
@@ -333,7 +333,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Adds pihole kiosk mode
+                        Spotify refresh token
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
