--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2017.08.3</version>
+        <version>2017.8.4</version>
     </parent>
 
 
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2017.08.3</version>
+            <version>2017.8.4</version>
         </dependency>
 
         <dependency>
@@ -333,12 +333,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        fix gridster after resize bug
-                        update gridster to latest
-                        update to jquery 3.x
-                        new icon for pages
-                        better logging
-                        refinement on the overall UI
+			    Set the web socket to be able to connect through wss:// when the user is using https
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
