--- a/plugins/kvm/pom.xml
+++ b/plugins/kvm/pom.xml
@@ -1,37 +1,43 @@
-<?xml version="1.0"?>
-<project
-        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-        xmlns="http://maven.apache.org/POM/4.0.0"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-    <modelVersion>4.0.0</modelVersion>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>2018.1.1</version>     </parent>
+        <groupId>com.ftpix.homedash.plugins</groupId>
+        <version>2018.1.1</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>mma</artifactId>
-    <name>mma</name>
-    <url>http://maven.apache.org</url>
+    <artifactId>kvm</artifactId>
+    <name>kvm</name>
+
+    <repositories>
+        <repository>
+            <id>libvirt-org</id>
+            <url>https://libvirt.org/maven2</url>
+        </repository>
+    </repositories>
+
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <sigar.version>1.6.4</sigar.version>
     </properties>
-
     <dependencies>
         <dependency>
-            <groupId>com.ftpix</groupId>
-            <artifactId>sherdog-parser</artifactId>
-            <version>1.0</version>
+            <groupId>org.libvirt</groupId>
+            <artifactId>libvirt</artifactId>
+            <version>0.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>4.5.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -52,4 +58,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
