--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2017.8.4</version>
+        <version>2018.1.1</version>
     </parent>
 
 
@@ -100,6 +100,7 @@
             <version>1.4.9</version>
         </dependency>
 
+
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>notifications</artifactId>
@@ -160,6 +161,11 @@
             <artifactId>portmapper</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>kvm</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
@@ -193,7 +199,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2017.8.4</version>
+            <version>2018.1.1</version>
         </dependency>
 
         <dependency>
@@ -333,11 +339,11 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-			    Set the web socket to be able to connect through wss:// when the user is using https
+                        Add KVM/QEMU module to start/shutdown VMs
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
-                    <serverId>github</serverId>
+                    <serverId>github-release</serverId>
                     <!-- If your project has additional artifacts, such as ones produced by
                          the maven-assembly-plugin, you can define the following
                          (requires version 1.1.1 of the plugin or higher): -->
