--- a/plugins/harddisk/pom.xml
+++ b/plugins/harddisk/pom.xml
@@ -33,7 +33,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>pl.touk</groupId>
+            <artifactId>throwing-function</artifactId>
+            <version>1.3</version>
+        </dependency>
 
     </dependencies>
 
