add dev mode to allow to modify front end without rebuilding the app move network monitor module to different folder to make the dev mode work

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -22,7 +22,7 @@
         <module>pihole</module>
         <module>portmapper</module>
         <module>couchpotato</module>
-        <module>network-monitor</module>
+        <module>networkmonitor</module>
         <module>dynamicdns</module>
         <module>googlepubliccalendar</module>
         <module>mma</module>
