add unifi plugin

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <artifactId>homedash</artifactId>
         <groupId>com.ftpix.homedash</groupId>
-        <version>2018.6.1</version>
+        <version>2018.6.2</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -31,6 +31,7 @@
         <module>plex</module>
         <module>spotify</module>
         <module>kvm</module>
+        <module>unifi</module>
     </modules>
 
     <dependencies>
