--- a/plugins/unifi/pom.xml
+++ b/plugins/unifi/pom.xml
@@ -7,11 +7,10 @@
     <parent>
         <groupId>com.ftpix.homedash.plugins</groupId>
         <artifactId>plugins</artifactId>
-        <version>2018.6.2</version>
-    </parent>
+        <version>2018.6.2</version>     </parent>
 
-    <artifactId>sonarrtv</artifactId>
-    <name>sonarrtv</name>
+    <artifactId>unifi</artifactId>
+    <name>unifi</name>
     <url>http://maven.apache.org</url>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -20,25 +19,11 @@
         <sigar.version>1.6.4</sigar.version>
     </properties>
     <dependencies>
-
         <dependency>
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
             <version>1.4.9</version>
         </dependency>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>19.0</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib -->
-        <dependency>
-            <groupId>org.imgscalr</groupId>
-            <artifactId>imgscalr-lib</artifactId>
-            <version>4.2</version>
-        </dependency>
-
     </dependencies>
 
     <build>
