--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2018.6.1</version>
+        <version>2018.6.2</version>
     </parent>
 
 
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2018.6.1</version>
+            <version>2018.6.2</version>
         </dependency>
 
         <dependency>
@@ -223,6 +223,12 @@
         <dependency>
             <groupId>com.ftpix.homedash.plugins</groupId>
             <artifactId>dockercompose</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ftpix.homedash.plugins</groupId>
+            <artifactId>unifi</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
@@ -345,7 +351,7 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        add work around to make the resizing/moving more reliable
+                        Add a unifi throughput module
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
