--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2018.6.2</version>
+        <version>2018.7.1</version>
     </parent>
 
 
@@ -205,7 +205,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2018.6.2</version>
+            <version>2018.7.1</version>
         </dependency>
 
         <dependency>
@@ -351,7 +351,8 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Add a unifi throughput module
+                        Add progress bar when copying file with harddisk plugin
+                        Add checkbox to show hidden file (off by default) in harddisk plugin
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
