--- a/web/pom.xml
+++ b/web/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.ftpix.homedash</groupId>
         <artifactId>homedash</artifactId>
-        <version>2018.8.1</version>
+        <version>2018.8.2</version>
     </parent>
 
 
@@ -199,7 +199,7 @@
         <dependency>
             <groupId>com.ftpix.homedash</groupId>
             <artifactId>models</artifactId>
-            <version>2018.8.1</version>
+            <version>2018.8.2</version>
         </dependency>
 
         <dependency>
@@ -373,9 +373,8 @@
                 <version>1.1.1</version>
                 <configuration>
                     <description>
-                        Get rid of old way of running the application to make it multi platform.
-                        Update to java 10.
-                        Run using docker.
+                        Fix layout of harddisk plugin clipboard layout
+                        Modify docker container to run under a specified user id and group id
                     </description>
                     <releaseName>${version}</releaseName>
                     <tag>${version}</tag>
