--- a/web/docker/Dockerfile
+++ b/web/docker/Dockerfile
@@ -1,5 +1,8 @@
 FROM openjdk:10
 
+#Installing virtmanager to be able to use kvm/qemu plugin
+RUN apt-get update && apt-get -y install qemu-kvm libvirt-clients libvirt-daemon-system
+
 RUN mkdir /app && mkdir /data
 
 ADD ./*.jar /app/homedash.jar
